# spotify_tests

./: .env.api.example  .env.example  .env.mobile.bstack  .env.mobile.bstack.example  .env.mobile.local  .env.mobile.local.example  .gitignore  .ruff.toml  README.md  config.py  mobile_config.py  pyproject.toml  pytest.ini
api_clients/: auth_helper.py  base_client.py  playlist_client.py  search_client.py  track_client.py
data/: user_data.py
data/schema/: add_items_to_playlist.py  add_track.py  create_playlist.py  create_playlist_schema.py  delete_track.py  get_playlist_items.py  get_track_id.py  get_track_info.py  get_track_schema.py
model/assertions/: android_signup_assertions.py  signup_assertions.py  web_signup_assertions.py
model/common/: enums.py
model/enums/: signup_error_messages.py  user_gender.py
model/locators/: android_signup_locators.py  web_signup_page_locators.py
model/mobile/: android_signup_assertions.py  android_signup_locators.py  signup_page_android.py
model/pages/: web_signup_page.py
model/pages/mobile/android/: signup_page_android.py
model/pages/web/: web_signup_page.py
model/web/: web_signup_assertions.py  web_signup_page.py  web_signup_page_locators.py
tests/api/: conftest.py  test_generate_schemas.py  test_playlists.py  test_tracks.py
tests/mobile/android/: conftest.py  test_signup_e2e_android.py  test_signup_validations_android.py
tests/ui/: conftest.py  test_signup.py
tests/ui/signup/: test_signup_validations.py
tests/web/: conftest.py  test_signup_e2e.py  test_signup_validations.py
tests/web/signup/: test_signup_e2e.py  test_signup_validations.py
utils/: __init__.py  allure_attach.py  env_loader.py  schema_generator.py  user_data.py
