[tool.poetry]
name = "spotify-tests"
version = "0.1.0"
description = ""
authors = ["kris-zvereva <krs.zvrv@gmail.com>"]
readme = "README.md"
packages = [
    {include = "api_clients"},
    {include = "model"},
    {include = "data"},
    {include = "utils"}
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^9.0.2"
selenium = "^4.26.1"
selene = "^2.0.0rc4"
faker = "^38.2.0"
allure-python-commons = "^2.15.2"
appium-python-client = "^5.2.4"
jsonschema = "^4.25.1"
pydantic = "^2.12.5"
dotenv = "^0.9.9"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
allure-pytest = "^2.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
